FullQa New/src/objects/Sales_Cycle_Extension_Request__c.object
<CustomObject>
    <description>Opportunity related object to facilitate the request of sales cycle extensions to loyalty leadership</description>
    <fields>
        <fullName>Date_to_Extend_To__c</fullName>
        <label>Date to Extend To</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Extension_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>https://jira.avalara.com/browse/IBST-16586</description>
        <inlineHelpText>This lookup is automatically populated by the Account related to the Extension Opportunity.</inlineHelpText>
        <label>Extension Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Sales Cycle Extension Requests</relationshipLabel>
        <relationshipName>Sales_Cycle_Extension_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Extension_Justification__c</fullName>
        <inlineHelpText>Summarize the reasoning for the extension</inlineHelpText>
        <label>Extension Justification</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Extension_Opportunity__c</fullName>
        <label>Extension Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Sales Cycle Extension Requests</relationshipLabel>
        <relationshipName>Sales_Cycle_Extension_Requests</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Original_Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Original Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Sales Cycle Extension Requests (Original Opportunity)</relationshipLabel>
        <relationshipName>Sales_Cycle_Extension_Requests1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Request_Status__c</fullName>
        <inlineHelpText>The approval status relative to the request</inlineHelpText>
        <label>Request Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Pending</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Sales Cycle Extension Request</label>
    <nameField>
        <displayFormat>OSCER{0000}</displayFormat>
        <label>Sales Cycle Extension Request Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sales Cycle Extension Requests</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>